--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{{!-- OK --}}
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Standard Meta -->
@@ -98,8 +98,9 @@
     </div>
 	</div>
 </div>
+
 <div class="link-container">
-  <a href={{prev.href}}>回上一頁</a>
+  <a href={{prev.href}}>回上一層</a>
 </div>
 {{{body}}}
 
