--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="/css/login_page.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"></script>
+<script src="/js/login_page.js"></script>
 <style>
+div#login_false_pop_up {
+  display: none;
+}
 </style>
 
 <div class="ui grid login-box">
   <div class="row">
-
     <div class="fourteen wide column centered login-inner-box">
-
+        <form id="login_form" method="post">
       <div class="ui grid one column">
-        <div class="column">
+        <div class="column input-box account-box">
           <input type="text" form="login_form" name="account" placeholder="帳號" required autofocus>
+          <label class="myerror"></label>
         </div>
-        <div class="column">
+        <div class="column input-box password-box">
           <input type="password" form="login_form" name="password" placeholder="密碼" required>
+          <label class="myerror"></label>
         </div>
 
-        <div class="column or-box">
-          <h1 class="font-white">或</h1>
-        </div>
-
-        <div class="column">
-          <div class="login-third-part">
-            <div class="col">
-              <a href="#">
-                <img class="login-way-icon" src="/img/loginThirdPart/google.png">
-              </a>
-            </div>
-            <div class="col">
-              <a href="#">
-                <img class="login-way-icon" src="/img/loginThirdPart/fb.png">
-              </a>
-            </div>
-            <div class="col">
-              <a href="#">
-                <img class="login-way-icon" src="/img/loginThirdPart/twitter.png">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="column">
+        <div class="column button-box">
           <button class="btn-as-link login-btn" type="submit" form="login_form">登入</button>
         </div>
 
@@ -50,20 +33,25 @@
               <a class="btn-as-link" href="/register">建立註冊</a>
             </div>
             <div class="column">
-              <a class="btn-as-link" href="#">忘記密碼</a>
+              <a class="btn-as-link" href="/forget">忘記密碼</a>
             </div>
           </div>
         </div>
-
-        <form id="login_form" action="/login" method="post">
-        </form>
-        <div class="column">
-          account: nekoneko<br>
-          password: ss12345678
-        </div>
       </div>
-
+        </form>
     </div>
-
+  </div>
+</div>
+<div id="login_false_pop_up">
+  <div class="b-close">
+    <div class="main-login-error">
+      <p>登入失敗</p>
+    </div>
+    <div class="content-login-error">
+      <p>帳號密碼輸入錯誤，請重新輸入</p>
+    </div>
+    <div class="image-login-error">
+      <img id="refresh-icon" src="/img/login_page/refresh-36.png">
+    </div>
   </div>
 </div>
