--- a/views/feedback.hbs
+++ b/views/feedback.hbs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 
-<!----------------------------------------------
+<!--
   customer evaluation and its background
 -->
 <div id="background">
 
   <div class="evaluation">
     <p> 顧客評價 </p>
-    <p> 4/5 </p>
+    <p> -/5 </p>
     <!--The star for evaluation-->
     <div class="star_form"> 
         <img src="/img/feedback/gray_star.png"> 
-        <img src="/img/feedback/white_star.png"> 
-        <img src="/img/feedback/white_star.png"> 
-        <img src="/img/feedback/white_star.png"> 
-        <img src="/img/feedback/white_star.png"> 
+        <img src="/img/feedback/gray_star.png"> 
+        <img src="/img/feedback/gray_star.png"> 
+        <img src="/img/feedback/gray_star.png"> 
+        <img src="/img/feedback/gray_star.png"> 
     </div>
   </div>
 
@@ -24,14 +24,13 @@
   <!--each comment-->
   {{#each comment}}
   <div class="comment">
-
     <div class="star">
       {{star}}
       <img src="/img/feedback/level_star.png">
     </div>
     <!--the photo-->
     <div class="avatar">
-      <img src="/img/feedback/custom_feedback.jpg">
+      <img src="/img/feedback/photo.png">
     </div>
     
     <div class="content">
@@ -49,5 +48,6 @@
   <img src="/img/feedback/line.jpg" class="line">
   {{/each}}
 
-<div>
+</div>
 <link rel="stylesheet" type="text/css" href="/css/feedback.css">
+<script src="js/feedback.js"></script>
