--- a/views/500.hbs
+++ b/views/500.hbs
@@ -4,6 +4,6 @@
 <br>
 <br>
 <br>
-<h1>500 - Not Found</h1>
-
+<h1 style="text-align: center;">500 - Not Found</h1>
+<a href="/"><h4 style="text-align: center;">按此回首頁</h4></a>
 </div>
