--- a/views/404.hbs
+++ b/views/404.hbs
@@ -4,6 +4,7 @@
 <br>
 <br>
 <br>
-<h1>404 - Not Found</h1>
+<h1 style="text-align: center;">404 - Not Found</h1>
+<a href="/"><h4 style="text-align: center;">按此回首頁</h4></a>
 
 </div>
