--- a/views/regModify.hbs
+++ b/views/regModify.hbs
@@ -56,7 +56,7 @@
     <p>修改成功</p>
   </div>
   <div class="content-register-succ">
-    <p>修改已成功，請重新登入！</p>
+    <p>修改已成功！</p>
   </div>
   <div class="image-register-succ">
     <img id="succ-icon" src="/img/login_page/refresh-36.png">
