--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -88,7 +88,7 @@
 <div class="ui grid my-nav">
 	<div class="three column row">
 		<div class="column myitem {{#if venderSel}}active-border active-color{{/if}}">
-      <a href="/selectStore" class="{{#if venderSel}}active-color{{/if}}">店家資訊</a>
+      <a href="/venderHome" class="{{#if venderSel}}active-color{{/if}}">店家資訊</a>
 		</div>
 		<div class="column myitem {{#if suitSel}}active-border active-color{{/if}}">
       <a href="/suitHome" class="{{#if suitSel}}active-color{{/if}}">西裝知識</a>
