--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -100,7 +100,7 @@
 </div>
 
 <div class="link-container">
-  <a href={{prev.href}}>回上一層</a>
+  <a href={{prev.href}}>{{prev.title}}</a>
 </div>
 {{{body}}}
 
