--- a/views/book_home.hbs
+++ b/views/book_home.hbs
@@ -65,7 +65,7 @@
         </div>
 
         <div class="column book-btn-box">
-          <input type="submit" class="uppercase" name="book-button" form="book_form" value="預約時間">
+          <input type="submit" class="uppercase" name="book-button" form="book_form" value="訂製西裝">
         </div>
       </form>
     </div>
