--- a/views/regModify.hbs
+++ b/views/regModify.hbs
@@ -42,7 +42,7 @@
                 <label class="myerror label-hide">*請輸入信箱</label>
               </div>
               <div class="field button-wrapper">
-                <button class="ui button" type="submit">修改帳號</button>
+                <button class="ui button" type="submit">修改資料</button>
               </div>
             </form>
           </div>
