--- a/public/css/login_page.css
+++ b/public/css/login_page.css
@@ -135,7 +135,7 @@ div.login-box div.column div.col img{
 /* error label */
 input.error-input {
   border: 3px solid rgba(0, 51, 51, 1) !important;
-  background: rgba(0, 129, 83, .3) !important;
+  background: rgb(170 69 97 / 30%) !important;
 }
 /*-------------------------------*/
 
