--- a/views/after_service.hbs
+++ b/views/after_service.hbs
@@ -65,4 +65,15 @@
       </div>
     </div>
   </div>
+  <div id="afterservice_succ_pop_up">
+    <div class="main-afterservice-succ">
+      <p>發布成功</p>
+    </div>
+    <div class="content-afterservice-succ">
+      <p>請重新整理！</p>
+    </div>
+    <div class="image-afterservice-succ">
+      <img id="succ-icon" src="/img/login_page/refresh-36.png">
+    </div>
+  </div>
 </div>
