--- a/views/book_home.hbs
+++ b/views/book_home.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class="column select-box">
           <select form="book_form" name="shop" class="select-styled">
-            <option value="" selected>選擇店家</option>
+            <option value="initial" selected>選擇店家</option>
             {{#each shopList}}
             <option value={{.}}>{{.}}</option>
             {{/each}}
