--- a/public/css/bookhome.css
+++ b/public/css/bookhome.css
@@ -134,7 +134,7 @@
 
   .error-input {
     border:2px solid rgba(0,51,51,1) !important;
-    background: rgba(0, 129, 83, .3) !important;
+    background: rgb(170 69 97 / 30%) !important;
   }
 
   div.select-box select:focus {
